feat: Add ZoomSDKVideoSource and ZoomSDKVirtualAudioMicEvent classes for raw data sending

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,10 @@ add_executable(zoomsdk src/main.cpp
         src/raw_record/ZoomSDKAudioRawDataDelegate.h
         src/raw_record/ZoomSDKRendererDelegate.cpp
         src/raw_record/ZoomSDKRendererDelegate.h
+        src/raw_send/ZoomSDKVideoSource.cpp
+        src/raw_send/ZoomSDKVideoSource.h
+        src/raw_send/ZoomSDKVirtualAudioMicEvent.h
+        src/raw_send/ZoomSDKVirtualAudioMicEvent.cpp
 )
 
 target_include_directories(zoomsdk PRIVATE ${JWT_CPP_INCLUDE_DIRS})
