--- a/config.toml
+++ b/config.toml
@@ -1,16 +1,17 @@
+  GNU nano 7.2                                                              config.toml                                                                        
 #### !! Do not store plain text credentials in production environments !!
 #### File Format: https://cliutils.github.io/CLI11/book/chapters/config.html#configure-file-format
 
 # Zoom Meeting SDK Client ID
-client-id=""
+client-id="57uu07IoQkOEDjBBtI3F5g"
 
 # Zoom Meeting SDK Client Secret
-client-secret=""
+client-secret="ng3XOVZ7WMeC3x9cPU0AgXiOPKP7G333"
 
 # Use a join-url or a meeting-id and password
-join-url=""
+join-url="https://us05web.zoom.us/j/89707336864?pwd=bleuMaDLRbtXlcZ17PU2bPErbuDL5h.1"
 
-[RawAudio] 
+[RawAudio]
 file="meeting-audio.pcm"
 
 #[RawVideo]
